manage categories done

--- a/greenly/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/greenly/src/app/components/admin-navbar/admin-navbar.component.html
@@ -13,6 +13,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav special-font-i mx-auto">
         <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/admin/home"
+            routerLinkActive="active-link">Home</a>
+        </li>
+        <li class="nav-item px-2">
           <a class="nav-link cursor-pointer fw-bold" routerLink="/admin/manage-loans"
             routerLinkActive="active-link">Loan Requests</a>
         </li>
