--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -44,3 +44,33 @@
         </div>
     </div>
 </section>
+<section class="my-3">
+    <div class="container">
+        <div class="my-4">
+            <h2 class="text-center special-font">Manage Categories</h2>
+            <div class="row justify-content-center align-items-start mt-3">
+                <div class="col-md-4 req-item item-1 rounded-4 p-3 cursor-pointer" routerLink="/admin/manage-categories">
+                    <div class="mb-2 circle">
+                        <span class="icon"><i class="fa-solid fa-plus"></i></span>
+                    </div>
+                    <h3 class="special-font">Manage Categories</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="my-3">
+    <div class="container">
+        <div class="my-4">
+            <h2 class="text-center special-font">Manage Sub Categories</h2>
+            <div class="row justify-content-center align-items-start mt-3">
+                <div class="col-md-4 req-item item-1 rounded-4 p-3 cursor-pointer" routerLink="/admin/manage-sub-categories">
+                    <div class="mb-2 circle">
+                        <span class="icon"><i class="fa-solid fa-plus"></i></span>
+                    </div>
+                    <h3 class="special-font">Manage Sub Categories</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
