--- a/greenly/src/app/components/manage-licences/manage-licences.component.html
+++ b/greenly/src/app/components/manage-licences/manage-licences.component.html
@@ -1,6 +1,31 @@
 <section>
     <div class="container my-2">
         <h1 class="special-font text-center">Manage licence requests</h1>
+        <div class="mb-3 pb-5 d-flex justify-content-end">
+            <div class="dropdown">
+                <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Filter by status
+                </button>
+                <ul class="dropdown-menu bg-light-subtle">
+                    <li>
+                        <span class="dropdown-item cursor-pointer" (click)="getAllRequests()">All</span>
+                    </li>
+                    <li>
+                        <span class="dropdown-item cursor-pointer"
+                            (click)="filterLicencesByStatus('pending')">Pending</span>
+                    </li>
+                    <li>
+                        <span class="dropdown-item cursor-pointer"
+                            (click)="filterLicencesByStatus('approved')">Approved</span>
+                    </li>
+                    <li>
+                        <span class="dropdown-item cursor-pointer"
+                            (click)="filterLicencesByStatus('rejected')">Rejected</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="row gy-4 mt-3 mb-5">
             @for (licence of licencesData; track licence._id) {
             <div class="col-md-4">
@@ -17,15 +42,18 @@
                     </div>
                     <div class="my-3">
                         <div>
-                        <p class="text-secondary ">Email: {{licence.email}}</p>
+                            <p class="text-secondary ">Email: {{licence.email}}</p>
                         </div>
                         <div class="d-flex justify-content-center align-items-center">
                             @if(licence.status === 'pending') {
-                            <p class="text-black fw-bold">Status: <span class="text-secondary">{{licence.status.toUpperCase()}}</span></p>
+                            <p class="text-black fw-bold">Status: <span
+                                    class="text-secondary">{{licence.status.toUpperCase()}}</span></p>
                             }@else if (licence.status === 'rejected') {
-                            <p class="text-black fw-bold">Status: <span class="text-danger">{{licence.status.toUpperCase()}}</span></p>
+                            <p class="text-black fw-bold">Status: <span
+                                    class="text-danger">{{licence.status.toUpperCase()}}</span></p>
                             }@else if (licence.status === 'approved') {
-                            <p class="text-black fw-bold">Status: <span class="text-success">{{licence.status.toUpperCase()}}</span></p>
+                            <p class="text-black fw-bold">Status: <span
+                                    class="text-success">{{licence.status.toUpperCase()}}</span></p>
                             }
                         </div>
                     </div>
